# Papyros

./: .gitignore  CMakeLists.txt  README.md  TEST.MD  pounce.build
.cache/clangd/index/: prs_core.c.A5E77F15A679B15D.idx  prs_core.h.4FE4CE16869ED260.idx  prs_core.h.51339F0976416127.idx  prs_utils.c.3E0092DD0C217B48.idx  prs_utils.h.AB66B4A7C93ACDDE.idx  prs_utils.h.B279D5BA520B9CC8.idx
.pounce/data/: executable_path.pounce  library_path.pounce
inc/: prs_core.h  prs_utils.h
src/: prs_core.c  prs_core.h  prs_utils.c  prs_utils.h
